# otterseq

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  settings.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pytest-coverage.yaml
src/: constants.py
src/legacy/: run_GWAS.py
src/otterseq/: errors.py  operations.py  pca.py  qc.py  snp.py  utils.py
src/ottersh/: IBD.sh  binarize.sh  duplicate_rsid.sh  duplicate_vars.sh  ibd.sh  logistic_regression.sh  merge_files.sh  pca.sh  qc.sh
tests/data/: toy.bed  toy.bim  toy.fam~  toy.map  toy.ped  toy.pgen  toy.pvar  toy_2.bed  toy_2.bim  toy_2.fam  toy_2.map  toy_2.ped  toy_2.pgen  toy_2.psam  toy_2.pvar
tests/data_log/: toy.assoc.logistic
tests/data_pca/: custom_output.covars.tsv  toy.eigenval  toy.eigenvec  toy.fam  toy.pheno.tsv
tests/data_qc/: missing_sample.md  missing_variants.md  toy.bed  toy.bim  toy.fam  toy.map  toy.ped  toy_qc.bed  toy_qc.bim  toy_qc.map  toy_qc.ped
tests/otterseq/: conftest.py  test_ops.py  test_pca.py  test_qc.py  test_snp.py  test_utils.py
tests/output_test/: common_snps.txt
