[tool.poetry]
name = "otterseq"
version = "0.0.2"
description = "GWAS and genotype data analysis"
authors = ["Vicente Peris Sempere <vsempereperis@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
seaborn = "^0.13.2"

[tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
absolufy-imports = "^0.3.1"
black = { extras = ["jupyter"], version = "^22.12.0" }
commitizen = "^2.39.1"
coverage = { extras = ["toml"], version = "^7.0.3" }
poethepoet = "^0.17.1"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.1.0"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-lazy-fixture = "^0.6.3"
ruff = "^0.1.3"
safety = "^2.3.5"
shellcheck-py = "^0.9.0"
typeguard = "^2.13.3"
mypy = "^1.2.0"
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
